# ray-tracing

./: .gitignore  Cargo.toml  README.md  image.ppm
src/: lib.rs  main.rs  vec3.rs
src/collision/: materials.rs  mod.rs  objects.rs
