[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
image = "0.23.13"

[profile.release]
opt-level = 3
